# weather-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 08502f460188_create_request_log_table.py
app/: auth.py  config.py  database.py  exceptions.py  logging.py  main.py  metrics.py  middleware.py  rate_limit.py  telemetry.py
app/cache/: routes.py  schema.py  service.py
app/history/: models.py  routes.py  schema.py  service.py
app/weather/: routes.py  schema.py  service.py
tests/: conftest.py  test_auth.py  test_benchmarks.py  test_cache.py  test_cache_service.py  test_history.py  test_main.py  test_rate_limit.py  test_telemetry.py  test_weather.py  test_weather_service.py
